# r5r-crypt

./: CMakeLists.txt  LICENSE  README.md
include/: R5R.h
src/: R5R-Decrypt.cpp  R5R-Encrypt.cpp  R5R-Misc.cpp
src/r5r-dec/: main.cpp
src/r5r-enc/: main.cpp
